objects/CameleonCPQ__CAMCPQSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PROS Smart CPQ settings</description>
    <fields>
        <fullName>CameleonCPQ__CPQDocsToSfdcFiles__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this option is checked, the documents generated by CPQ will be synchronized to Salesforce Files instead of being attached to the Notes&amp;Attachments of Quote object</inlineHelpText>
        <label>CPQ documents synchronized to Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQFrameHeight__c</fullName>
        <description>The height of the CPQ frame displayed in the content tab of a Quote objet</description>
        <label>CPQ Frame Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQMappingSet__c</fullName>
        <description>Quote Mapping Set</description>
        <label>CPQ Mapping Set Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQServer_EndpointURL__c</fullName>
        <description>The PROS Smart CPQ server URL</description>
        <inlineHelpText>https://&lt;hostname&gt;[:port]</inlineHelpText>
        <label>CPQ Server Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_AuthPwd__c</fullName>
        <description>CPQ authentication password</description>
        <label>CPQ Auth. Password</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_AuthUser__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <description>** Deprecated :CPQ authentication user name **
New usage : Mapping method to send language code from Force.com to CPQ</description>
        <inlineHelpText>[1] The language code sent to CPQ is the Force.com user&apos;s Language
[2] The language code sent to CPQ is the Country code of Force.com user&apos;s Locale</inlineHelpText>
        <label>Language mapping policy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_BackAction__c</fullName>
        <description>The name of the quote model action that will be triggered when users add a CP or a SI to avoid the display of quote UI.</description>
        <inlineHelpText>This setting allows CPQ to  launch an action when adding a Si or a CP to avoid the display of quote UI.
Syntax : [Action name:Service name]
Example: ConfiguratorList:Subscription</inlineHelpText>
        <label>CPQ Back Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_EmptyQuoteQuickAction__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>The name of the quote model action that will be triggered at the begining of a CPQ session, before the display of quote UI.</description>
        <inlineHelpText>This setting allows CPQ  to immediately start a predefined Configuration Service when creating a new quote. 
Syntax :  [Action name:Service name] 
Example: ConfiguratorList:Subscription</inlineHelpText>
        <label>CPQ Session Empty Quote Quick Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_Layout2__c</fullName>
        <description>Name of the CPQ Layout used to open a session from the &quot;Proposal&quot; tab of a Cameleon Quote</description>
        <inlineHelpText>A &quot;Proposal&quot; tab will appear besides the &quot;Content&quot; tab of a Cameleon Quote if this setting contains a non-empty value.
The value must be the name of an existing CPQ Layout dedicated exclusively to the generation of documents.</inlineHelpText>
        <label>CPQ Proposal UI Layout</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_Layout__c</fullName>
        <defaultValue>&quot;cpqUI_FORCE&quot;</defaultValue>
        <description>Name of the CPQ Layout used to open a session from Salesforce.com</description>
        <label>CPQ Session UI Layout</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_OverviewSyncAction__c</fullName>
        <defaultValue>&quot;Synchronize&quot;</defaultValue>
        <description>The name of the action in CPQ Quote Model used to synchronize CPQ content when Overview tab is selected within the Cameleon Quote panel</description>
        <label>CPQ Synchronize Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_QuoteModel_Name__c</fullName>
        <defaultValue>&quot;Default_FORCE&quot;</defaultValue>
        <description>The name of the CPQ quote model used to open a session from Salesforce.com</description>
        <label>CPQ Quote Model Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_QuoteModel_Release__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The release number of the CPQ quote model used to open a session from Salesforce.com</description>
        <label>CPQ Quote Model Release</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_RefreshAction__c</fullName>
        <defaultValue>&quot;RefreshQuote&quot;</defaultValue>
        <description>The name of the action of the CPQ Quote Model that is triggered when the Refresh button is pressed on Cameleon Quote overview tab</description>
        <label>CPQ Refresh Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQSession_Theme__c</fullName>
        <description>Name of the CPQ Theme</description>
        <label>CPQ Session Quote UI Theme</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CPQUserGroupPolicy__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Code that determines the Salesforce.com user&apos;s property passed to CPQ as the User Group (Access Rights computation)</description>
        <inlineHelpText>1 = [User&apos;s Profile Name], 
2 = [User&apos;s Role]
3 = [Profile + &apos;_&apos; + Role]</inlineHelpText>
        <label>CPQ User Group Policy</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Content2Tab_Visibility__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>Defines the Quote statuses list for which the PRINT tab will be visible</description>
        <inlineHelpText>Defines the Quote statuses list for which the PRINT tab will be visible.
Comma separated list of statuses : Draft,InReview, ... or &quot;NONE&quot; (default) or &quot;ALL&quot;
The tab will be visible only if a &quot;CPQ Proposal UI Layout&quot; has been defined in Custom Settings</inlineHelpText>
        <label>Quote Panel PRINT Tab Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ContractTab_Visibility__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>Defines the Quote statuses list for which the CONTRACT tab will be visible</description>
        <inlineHelpText>Defines the Quote statuses list for which the CONTRACT tab will be visible.
Comma separated list of statuses : Draft,InReview, ... or &quot;NONE&quot; (default) or &quot;ALL&quot;
The tab will be visible only if the user has a valid license for Contract module</inlineHelpText>
        <label>Quote Panel CONTRACT Tab Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Debug_CustomApexClass__c</fullName>
        <description>The name of the Custom Apex class dedicated to debugging.</description>
        <label>Custom Apex Class Debug</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__LicenseRole__c</fullName>
        <inlineHelpText>The License Role related to the user or profile. Only needed for &lt;named&gt; License Type. Must be one of the following values :
- internalSales
- internalReviewer
- externalPartner
- externalCustomer</inlineHelpText>
        <label>License Role</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__LicenseType__c</fullName>
        <description>License Type</description>
        <inlineHelpText>The License Type related to the user or profile. Must be one of the following values :
- named
- concurrent
- hits</inlineHelpText>
        <label>License Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__MappingIN_CustomApexClass__c</fullName>
        <description>The name of the Apex Class that will be invoked before calling CPQ.</description>
        <label>Custom Apex Class Mapping IN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__MobileSpecificExperience__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the quote is opened on a phone device and this option is checked, CPQ will use a cart model and layout having the _TouchPhone suffix. This will allow to have separate cart models/layouts/themes for tablet and phone devices. If not checked and quote is opened on any mobile device, the suffix &quot;_TouchTablet&quot; will be used.</description>
        <label>Enable Moble-specific Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__OAuth_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine whether CPQ authenticates to Salesforce.com through OAuth Connected App. If not, Salesforce.com Session ID is used for the authentication.</description>
        <inlineHelpText>Check this box if CPQ should authenticate to Salesforce.com through OAuth Connected App (OAuth protocol). Leave unchecked to use session ID as the authentication method.</inlineHelpText>
        <label>OAuth Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ProductMgtPolicy__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Code that determines the Management Policy for Products</description>
        <inlineHelpText>1 = [Re-Use Only], 
2 = [Allow Creation Or Re-Use Existing]
3 = [Re-Use Existing And Update]
4 = [Re-Use (or Create if necessary) and Update]</inlineHelpText>
        <label>Product Management Policy</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ProductsPricebookName__c</fullName>
        <inlineHelpText>The name of the price book used to create pricebook entries when creating new products during synchronization</inlineHelpText>
        <label>Products pricebook name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteDetailScreenMode__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates how the detail page of a Cameleon Quote (Overview and Content tabs) will be displayed</description>
        <inlineHelpText>1 = [Standard (SFDC Chatter and left/top menu bar are visible)]
2 = [Full screen capability (left/top menu bars can be hidden)]
3 = [Full screen only (left/top menu bars are hidden)]
4 = [Full screen with no overview/content links]</inlineHelpText>
        <label>Quote Screen Mode</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ReadOnlyMode_Statuses__c</fullName>
        <description>Defines the Quote statuses list for which the content will be opened in read-only mode. No value editing will be possible and all actions will be disabled on the spreadsheet.</description>
        <inlineHelpText>Defines the Quote statuses list for which the content will be opened in read-only mode.
Comma separated list of statuses : Accepted,Rejected, ... or &quot;NONE&quot; (default) or &quot;ALL&quot;
No value editing + all actions will be disabled on the spreadsheet.</inlineHelpText>
        <label>Statuses for Content read-only mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__RefreshOnClone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refresh the content of a cloned Cameleon Quote upon clone action</description>
        <label>Refresh On Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__StdTrigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify if the trigger that populates quote entity fields must be launched after synchronization of cart content</description>
        <label>Enable standard trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>PROS CPQ settings</label>
</CustomObject>